# Poisson-Solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  cmake.yml  tests.yml
scripts/: build.sh  tuning.py
src/: Makefile  color_mod.f90  config_mod.f90  gauss_seidel_mod.F90  gauss_seidel_mod.f90  grid_mod.f90  gs-solve.F90  gs-solve.f90  lapack_mod.F90  lapack_mod.f90  poisson_solver.F90  precisn_mod.f90
tests/: CMakeLists.txt
tests/test-data/: fort.10
